--- a/CustomizedHouse/src/main/resources/templates/indexLayout.html
+++ b/CustomizedHouse/src/main/resources/templates/indexLayout.html
@@ -3,6 +3,22 @@
       >
 <head th:replace="fragments/header :: indexHeader">
     <div th:replace="fragments/chart :: chart1Head"></div>
+    <style>
+        .home {
+            background: url(/images/background/home.jpg) no-repeat bottom center !important;
+            background-size: cover;
+            position: relative;
+        }
+
+        .input-group {
+            height: 45px;
+        }
+
+        .about_bottom_content {
+            padding-left: 80px;
+            padding-right: 80px;
+        }
+    </style>
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse">
 <div class="culmn">
