폴더 구조 변경 중

--- a/CustomizedHouse/src/main/resources/templates/indexLayout.html
+++ b/CustomizedHouse/src/main/resources/templates/indexLayout.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-light navbar-expand-lg  navbar-fixed white no-background bootsnav">
         <div th:replace="fragments/header :: indexNav"></div>
     </nav>
-    <section layout:fragment="indexContent">
+    <section layout:fragment="content">
     </section>
     <br>
     <br>
