--- a/CustomizedHouse/src/main/resources/templates/join/loginPage.html
+++ b/CustomizedHouse/src/main/resources/templates/join/loginPage.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <section id="loginPage" class="about roomy-100" layout:fragment="indexContent">
-    <form action="" method="post" name="loginForm">
+    <form action="/login" method="post" name="loginForm">
         <div class="container">
             <div class="about_content">
                 <div class="row">
@@ -28,14 +28,15 @@
                             <div class="form-group">
                                 <div class="input-group">
                                     <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                                    <input class="form-control" type="text" name="id" id="id" placeholder="아이디"
+                                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                                    <input class="form-control" type="text" name="username" id="id" placeholder="아이디"
                                            required="required">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="input-group">
                                     <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                                    <input class="form-control" type="password" name="pwd" id="pwd"
+                                    <input class="form-control" type="password" name="password" id="password"
                                            placeholder="비밀번호" required="required">
                                 </div>
                             </div>
