--- a/CustomizedHouse/src/main/resources/templates/sign/loginPage.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/loginPage.html
@@ -14,7 +14,7 @@
         }
     </style>
 </head>
-<section id="loginPage" class="about roomy-100" layout:fragment="indexContent">
+<section id="loginPage" class="about roomy-100" layout:fragment="content">
     <form action="/login" method="post" name="loginForm">
         <div class="container">
             <div class="about_content">
