--- a/CustomizedHouse/src/main/resources/templates/sign/signUpPage.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpPage.html
@@ -18,7 +18,7 @@
 		}
     </style>
 </head>
-<section id="loginPage" class="about roomy-100" layout:fragment="indexContent">
+<section class="about roomy-100" layout:fragment="content">
     <div>
 				<div class="container">
 					<div class="about_content">
