--- a/CustomizedHouse/bin/main/templates/index.html
+++ b/CustomizedHouse/bin/main/templates/index.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 
-<section id="hello" class="home bg-mega" layout:fragment="indexContent">
+<section id="hello" class="home bg-mega" layout:fragment="content">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
