--- a/CustomizedHouse/src/main/resources/templates/sign/loginPage.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/loginPage.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <section id="loginPage" class="about roomy-100" layout:fragment="content">
-    <form action="/login" method="post" name="loginForm">
+    <form action="/sign/loginPage" method="post" name="loginForm">
         <div class="container">
             <div class="about_content">
                 <div class="row">
