--- a/CustomizedHouse/bin/main/templates/fragments/header.html
+++ b/CustomizedHouse/bin/main/templates/fragments/header.html
@@ -34,7 +34,7 @@
         <ul>
             <li class="login">
                 <a sec:authorize="isAnonymous()" th:href="@{sign/loginPage}">로그인</a>
-                <a sec:authorize="isAuthenticated()" th:href="@{/loginPage}">로그아웃</a>
+                <a sec:authorize="isAuthenticated()" th:href="@{/sign/logout}">로그아웃</a>
             </li>
             <li class="join"><a sec:authorize="isAnonymous()" th:href="@{sign/signUpPage}">회원가입</a></li>
             <li class="join"><a sec:authorize="isAuthenticated()" th:href="@{/loginPage}">내정보</a></li>
