--- a/CustomizedHouse/src/main/resources/templates/fragments/header.html
+++ b/CustomizedHouse/src/main/resources/templates/fragments/header.html
@@ -37,7 +37,8 @@
                 <a sec:authorize="isAuthenticated()" th:href="@{/sign/logout}">로그아웃</a>
             </li>
             <li class="join"><a sec:authorize="isAnonymous()" th:href="@{sign/signUpPage}">회원가입</a></li>
-            <li class="join"><a sec:authorize="isAuthenticated()" th:href="@{/loginPage}">내정보</a></li>
+            <li class="join"><a sec:authorize="hasRole('ROLE_REAUSER')" th:href="@{/rea/myPage}">내정보</a></li>
+            <li class="join"><a sec:authorize="hasRole('ROLE_GENUSER')" th:href="@{/gen/myPage}">내정보</a></li>
             <li class="side-menu">
                 <a sec:authorize="hasRole('ROLE_ADMIN')"><i class='fa fa-bars'></i></a>
         </ul>
