--- a/CustomizedHouse/src/main/resources/templates/fragments/footer.html
+++ b/CustomizedHouse/src/main/resources/templates/fragments/footer.html
@@ -9,3 +9,18 @@
         </div>
     </div>
 </div>
+<script th:src="@{/assets/js/vendor/jquery-1.11.2.min.js}"></script>
+<script th:src="@{/assets/js/vendor/popper.min.js}"></script>
+<script th:src="@{/assets/js/vendor/bootstrap.min.js}"></script>
+
+<script th:src="@{/assets/js/jquery.magnific-popup.js}"></script>
+<script th:src="@{/assets/js/jquery.easing.1.3.js}"></script>
+<script th:src="@{/assets/js/slick.min.js}"></script>
+<script th:src="@{/assets/js/jquery.collapse.js}"></script>
+
+<script th:src="@{/assets/js/plugins.js}"></script>
+<script th:src="@{/assets/js/main.js}"></script>
+<script th:src="@{/assets/js/bootsnav.js}"></script>
+
+<script th:src="@{/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js}"></script>
+<script th:src="@{//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js}"></script>
