페이지 style 적용 수정

--- a/CustomizedHouse/src/main/resources/templates/fragments/header.html
+++ b/CustomizedHouse/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,8 @@
 <head th:fragment="indexHeader">
     <title>Drop 4our bit</title>
     <meta charset="utf-8">
-    <script th:src="@{//code.jquery.com/ui/1.12.1/jquery-ui.js}"></script>
+    <script th:src="@{//code.jquery.com/jquery-3.4.1.min.js}"></script>
+
     <!--폰트적용해야함-->
     <link rel="stylesheet" th:href="@{/css/slick.css}" type="text/css"/>
     <link rel="stylesheet" th:href="@{/css/slick-theme.css}" type="text/css"/>
