[#5] 폰트어썸 추가

--- a/CustomizedHouse/src/main/resources/templates/fragments/header.html
+++ b/CustomizedHouse/src/main/resources/templates/fragments/header.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" th:href="@{/css/responsive.css}" type="text/css"/>
     <link rel="stylesheet" th:href="@{/css/bootsnav.css}" type="text/css"/>
     <link rel="stylesheet" th:href="@{//fonts.googleapis.com/css?family=Jua&display=swap}" type="text/css"/>
+    <link rel="stylesheet" th:href="@{//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css}" type="text/css"/>
 
 
     <meta name="description" content="">
