[#7] 회원가입 약관동의 페이지 수정중

--- a/CustomizedHouse/src/main/resources/templates/sign/signUpGeneric.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpGeneric.html
@@ -289,4 +289,31 @@
 		<!--End off row-->
 	</div>
 	<!--End off container -->
+	<script>
+		function checkAll() {
+			if ($("#allCheck").is(':checked')) {
+				$("input[name=check]").prop("checked", true);
+			} else {
+				$("input[name=check]").prop("checked", false);
+			}
+		}
+		$(function() {
+
+			$("#agree").click(function() {
+				if ($("#check1").is(":checked") == false) {
+					alert("모든 약관에 동의 하셔야 다음 단계로 진행 가능합니다.");
+					return;
+				} else if ($("#check2").is(":checked") == false) {
+					alert("모든 약관에 동의 하셔야 다음 단계로 진행 가능합니다.");
+					return;
+				} else if ($("#check3").is(":checked") == false) {
+					alert("모든 약관에 동의 하셔야 다음 단계로 진행 가능합니다.");
+					return;
+				} else {
+					location.href = 'JoinGeneric.jsp';
+				}
+
+			});
+		});
+	</script>
 </section>
