--- a/CustomizedHouse/src/main/resources/templates/indexLayout.html
+++ b/CustomizedHouse/src/main/resources/templates/indexLayout.html
@@ -2,7 +2,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       >
 <head th:replace="fragments/header :: indexHeader">
-    <div th:replace="fragments/chart :: chart1Head"></div>
+<!--    <div th:replace="fragments/chart :: chart1Head"></div>-->
     <style>
         .home {
             background: url(/images/background/home.jpg) no-repeat bottom center !important;
