--- a/CustomizedHouse/src/main/resources/templates/fragments/header-rea.html
+++ b/CustomizedHouse/src/main/resources/templates/fragments/header-rea.html
@@ -17,13 +17,17 @@
     <link rel="stylesheet" th:href="@{/css/bootsnav.css}" type="text/css"/>
     <script th:src="@{/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js}"></script>
 
+
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <style>
+    <style type="text/css">
+	a {
+	color:black;
+	}
 
     </style>
 </head>
@@ -31,15 +35,12 @@
     <div class="attr-nav">
         <ul>
             <li class="login">
-                <a sec:authorize="isAnonymous()" th:href="@{sign/loginPage}">로그인</a>
-                <a sec:authorize="isAuthenticated()" th:href="@{/sign/logout}">로그아웃</a>
+                <a style="color:black;" sec:authorize="isAnonymous()" th:href="@{sign/loginPage}">로그인</a>
+                <a style="color:black;" sec:authorize="isAuthenticated()" th:href="@{/sign/logout}">로그아웃</a>
             </li>
-            <li class="join"><a sec:authorize="isAnonymous()" th:href="@{sign/signUpPage}">회원가입</a></li>
-            <li class="join"><a sec:authorize="hasRole('ROLE_REAUSER')" th:href="@{/rea/reaMain}">공인중개사 회원</a></li>
-            <li class="join"><a sec:authorize="hasRole('ROLE_GENUSER')" th:href="@{/gen/myPage}">내정보</a></li>
-            <li class="side-menu">
-                <a sec:authorize="hasRole('ROLE_ADMIN')"><i class='fa fa-bars'></i></a>
-            </li>
+            <li class="join"><a style="color:black;" sec:authorize="isAuthenticated()" th:href="@{/rea/mainPage}">메인</a></li>
+            <li class="join"><a style="color:black;" sec:authorize="isAuthenticated()" th:href="@{/rea/myPage}">마이페이지</a></li>
+            <li class="join"><a style="color:black;" sec:authorize="isAuthenticated()" th:href="@{/rea/introPage}">소개페이지</a></li>
         </ul>
     </div>
     
