--- a/CustomizedHouse/src/main/resources/templates/fragments/header.html
+++ b/CustomizedHouse/src/main/resources/templates/fragments/header.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
-
 <head th:fragment="indexHeader">
     <title>Drop 4our bit</title>
     <meta charset="utf-8">
-    <script th:src="@{//code.jquery.com/jquery-3.4.1.min.js}"></script>
-
     <!--폰트적용해야함-->
     <link rel="stylesheet" th:href="@{/css/slick.css}" type="text/css"/>
     <link rel="stylesheet" th:href="@{/css/slick-theme.css}" type="text/css"/>
@@ -18,16 +15,17 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css"/>
     <link rel="stylesheet" th:href="@{/css/responsive.css}" type="text/css"/>
     <link rel="stylesheet" th:href="@{/css/bootsnav.css}" type="text/css"/>
-    <link rel="stylesheet" th:href="@{//fonts.googleapis.com/css?family=Jua&display=swap}" type="text/css"/>
-    <link rel="stylesheet" th:href="@{//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css}" type="text/css"/>
-
+    <script th:src="@{/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js}"></script>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <style>
 
-    <link rel="stylesheet" th:href="@{//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css}" type="text/css"/>
-
-
+    </style>
 </head>
 <div class="container" th:fragment="indexNav">
     <div class="attr-nav">
@@ -37,12 +35,14 @@
                 <a sec:authorize="isAuthenticated()" th:href="@{/sign/logout}">로그아웃</a>
             </li>
             <li class="join"><a sec:authorize="isAnonymous()" th:href="@{sign/signUpPage}">회원가입</a></li>
-            <li class="join"><a sec:authorize="hasRole('ROLE_REAUSER')" th:href="@{/rea/myPage}">내정보</a></li>
+            <li class="join"><a sec:authorize="hasRole('ROLE_REAUSER')" th:href="@{/rea/reaMain}">공인중개사 회원</a></li>
             <li class="join"><a sec:authorize="hasRole('ROLE_GENUSER')" th:href="@{/gen/myPage}">내정보</a></li>
             <li class="side-menu">
                 <a sec:authorize="hasRole('ROLE_ADMIN')"><i class='fa fa-bars'></i></a>
+            </li>
         </ul>
     </div>
+    
     <div class="navbar-header">
         <button type="button" class="navbar-toggler" data-toggle="collapse"
                 data-target="#navbar-menu"></button>
