[#7] 일반유저 회원가입 정보입력창 추가

--- a/CustomizedHouse/src/main/resources/templates/sign/signUpGenericTerms.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpGenericTerms.html
@@ -274,13 +274,13 @@
 									<button type="submit" class="btn btn-primary btn-block btn-lg" id="agree">Agree</button>
 								</div>
 								<div class="col-sm-6">
-									<button type="reset" class="btn btn-primary btn-block btn-lg" onclick="location.href='../getMain.d4b'">Cancel</button>
+									<button type="reset" class="btn btn-primary btn-block btn-lg" onclick="location.href='sign/signUpPage'">Cancel</button>
 								</div>
 							</div>
 						</div>
 						<br>
 						<br>
-						<div class="text-center">이미 회원이신가요? <a href="../LoginPageService.d4b">Click here</a></div>
+						<div class="text-center">이미 회원이신가요? <a href="/sign/loginPage">Click here</a></div>
 						<br> <br> <br>
 					</div>
 				</div>
@@ -310,9 +310,8 @@
 					alert("모든 약관에 동의 하셔야 다음 단계로 진행 가능합니다.");
 					return;
 				} else {
-					location.href = 'JoinGeneric.jsp';
+					location.href = '/sign/signUpGenericInfo';
 				}
-
 			});
 		});
 	</script>
