--- a/CustomizedHouse/src/main/resources/templates/sign/signUpPage.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpPage.html
@@ -51,7 +51,7 @@
 								<br>
 									<h5><i class="fas fa-user"></i> 개인회원</h5>
 									<br><p>맞집의 다양한 정보와 서비스를 모두 이용하실 수 있습니다.</p><br>
-									<button type="submit" class="btn btn-primary btn-block btn-lg"  onclick="location.href='/sign/signUpGeneric'">Join</button>
+									<button type="submit" class="btn btn-primary btn-block btn-lg"  onclick="location.href='/sign/signUpGenericTerms'">Join</button>
 								</div>
 							</div>
 							<div class="col-md-6">
@@ -59,7 +59,7 @@
 								<br>
 									<h5><i class="fas fa-home"></i> 공인중개사회원</h5>
 									<br><p>맞집의 중개사 지원을 위한 서비스를 모두 이용하실 수 있습니다.</p><br>
-									<button type="submit" class="btn btn-primary btn-block btn-lg"  onclick="location.href='/sign/signUpREA'">Join</button>
+									<button type="submit" class="btn btn-primary btn-block btn-lg"  onclick="location.href='/sign/signUpREATerms'">Join</button>
 								</div>
 							</div>
 						</div>
