[#5] main 페이지에서 sale 페이지로 이동 ing

--- a/CustomizedHouse/bin/main/templates/index.html
+++ b/CustomizedHouse/bin/main/templates/index.html
@@ -2,7 +2,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="~{indexLayout}"
 >
-<head>
+<section id="hello" class="home bg-mega" layout:fragment="content">
     <style type="text/css">
         .ui-autocomplete {
             max-height: 100px;
@@ -12,9 +12,6 @@
             background-color: rgba( 255, 255, 255, 0.5);
         }
     </style>
-</head>
-
-<section id="hello" class="home bg-mega" layout:fragment="content">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -31,9 +28,9 @@
                         <input class="form-control" id="searchInput" type="text"
                                placeholder="동으로 검색">
                         <div id="data">
-                            <button type="submit" id="submitbtn" style="height: 45px;" > <!-- onclick="location.href='SelectaptListService.d4b?search='" -->
+                            <a type="button" th:href="@{sale/saleListPage}" style="height: 45px;" > <!-- onclick="location.href='SelectaptListService.d4b?search='" -->
                                 <i class="fa fa-search"></i>
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
