--- a/CustomizedHouse/src/main/resources/templates/sign/signUpREATerms.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpREATerms.html
@@ -1,8 +1,19 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	  layout:decorator="~{indexLayout}">
-<section id="join" class="about roomy-100">
-
+<section id="signUpGeneric" class="about roomy-100" layout:fragment="content">
+	<style type="text/css">
+		h2, label {
+			font-family: 'Jua', sans-serif;
+		}
+		span{
+			color:#ff6863;
+		}
+		b{
+			color : black;
+			font-size: 16px;
+		}
+	</style>
 	<div class="container">
 		<div class="about_content">
 			<div class="row">
@@ -22,7 +33,7 @@
 						<div class="form-group">
 							<label class="fancy-checkbox"><input type="checkbox" name="check" id="check1">&nbsp;맞집 이용약관 동의<span>(필수)</span></label>
 							<p>
-		<textarea cols="73" rows="7">여러분을 환영합니다.
+		<textarea cols="82" rows="7">여러분을 환영합니다.
 맞집 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 맞집 서비스의 이용과 관련하여 맞집 서비스를 제공하는 맞집 주식회사(이하 ‘맞집’)와 이를 이용하는 맞집 서비스 회원(이하 ‘회원’) 또는 비회원과의 관계를 설명하며, 아울러 여러분의 맞집 서비스 이용에 도움이 될 수 있는 유익한 정보를 포함하고 있습니다.
 
 맞집 서비스를 이용하시거나 맞집 서비스 회원으로 가입하실 경우 여러분은 본 약관 및 관련 운영 정책을 확인하거나 동의하게 되므로, 잠시 시간을 내시어 주의 깊게 살펴봐 주시기 바랍니다.
@@ -140,7 +151,7 @@
 							<label class="fancy-checkbox"><input type="checkbox" name="check" id="check2">&nbsp;개인정보 수집 및 이용에 대한 안내 동의<span>(필수)</span></label>
 
 							<p>
-		<textarea cols="73" rows="5">정보통신망법 규정에 따라 맞집에 회원가입 신청하시는 분께 수집하는 개인정보의 항목, 개인정보의 수집 및 이용목적, 개인정보의 보유 및 이용기간을 안내 드리오니 자세히 읽은 후 동의하여 주시기 바랍니다.
+		<textarea cols="82" rows="5">정보통신망법 규정에 따라 맞집에 회원가입 신청하시는 분께 수집하는 개인정보의 항목, 개인정보의 수집 및 이용목적, 개인정보의 보유 및 이용기간을 안내 드리오니 자세히 읽은 후 동의하여 주시기 바랍니다.
 
 1. 수집하는 개인정보
 이용자는 회원가입을 하지 않아도 매물 검색, 차트 및 뉴스 보기 등 대부분의 맞집 서비스를 회원과 동일하게 이용할 수 있습니다. 이용자가 매물 북마크, 후기 등록 등과 같이 개인화 혹은 회원제 서비스를 이용하기 위해 회원가입을 할 경우, 맞집은 서비스 이용을 위해 필요한 최소한의 개인정보를 수집합니다.
@@ -192,7 +203,7 @@
 						<div class="form-group">
 							<label class="fancy-checkbox"><input type="checkbox" name="check" id="check3">&nbsp;위치정보 이용약관 동의<span>(필수)</span></label>
 							<p>
-		<textarea cols="73" rows="5">위치정보 이용약관에 동의하시면, 위치를 활용한 광고 정보 수신 등을 포함하는 맞집 위치기반 서비스를 이용할 수 있습니다.
+		<textarea cols="82" rows="5">위치정보 이용약관에 동의하시면, 위치를 활용한 광고 정보 수신 등을 포함하는 맞집 위치기반 서비스를 이용할 수 있습니다.
 
 제 1 조 (목적)
 이 약관은 맞집 주식회사 (이하 “회사”)가 제공하는 위치정보사업 또는 위치기반서비스사업과 관련하여 회사와 개인위치정보주체와의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다.
@@ -243,7 +254,7 @@
 회사의 상호, 구성인의 정보는 다음과 같습니다.
 
 상호: 맞집 주식회사
-구성인 : 김진호, 이정은, 이혜리, 오형남
+구성인 : 윤다정, 이정은, 이혜리, 오형남
 
 부칙
 제1조 시행일
@@ -263,13 +274,13 @@
 									<button type="submit" class="btn btn-primary btn-block btn-lg" id="agree">Agree</button>
 								</div>
 								<div class="col-sm-6">
-									<button type="reset" class="btn btn-primary btn-block btn-lg" onclick="location.href='../getMain.d4b'">Cancel</button>
+									<button type="reset" class="btn btn-primary btn-block btn-lg" onclick="location.href='sign/signUpPage'">Cancel</button>
 								</div>
 							</div>
 						</div>
 						<br>
 						<br>
-						<div class="text-center">이미 회원이신가요? <a href="../LoginPageService.d4b">Click here</a></div>
+						<div class="text-center">이미 회원이신가요? <a href="/sign/loginPage">Click here</a></div>
 						<br> <br> <br>
 					</div>
 				</div>
@@ -278,5 +289,30 @@
 		<!--End off row-->
 	</div>
 	<!--End off container -->
+	<script>
+		function checkAll() {
+			if ($("#allCheck").is(':checked')) {
+				$("input[name=check]").prop("checked", true);
+			} else {
+				$("input[name=check]").prop("checked", false);
+			}
+		}
+		$(function() {
 
+			$("#agree").click(function() {
+				if ($("#check1").is(":checked") == false) {
+					alert("모든 약관에 동의 하셔야 다음 단계로 진행 가능합니다.");
+					return;
+				} else if ($("#check2").is(":checked") == false) {
+					alert("모든 약관에 동의 하셔야 다음 단계로 진행 가능합니다.");
+					return;
+				} else if ($("#check3").is(":checked") == false) {
+					alert("모든 약관에 동의 하셔야 다음 단계로 진행 가능합니다.");
+					return;
+				} else {
+					location.href = '/sign/signUpREAInfo';
+				}
+			});
+		});
+	</script>
 </section>
