[#5] main에서 버튼 클릭 시 sale 페이지로 이동

--- a/CustomizedHouse/bin/main/templates/index.html
+++ b/CustomizedHouse/bin/main/templates/index.html
@@ -28,9 +28,9 @@
                         <input class="form-control" id="searchInput" type="text"
                                placeholder="동으로 검색">
                         <div id="data">
-                            <a type="button" th:href="@{sale/saleListPage}" style="height: 45px;" > <!-- onclick="location.href='SelectaptListService.d4b?search='" -->
+                            <button type="button" onclick="location.href='/sale/saleListPage'" style="height: 45px;" > <!-- onclick="location.href='SelectaptListService.d4b?search='" -->
                                 <i class="fa fa-search"></i>
-                            </a>
+                            </button>
                         </div>
                     </div>
                 </div>
