--- a/CustomizedHouse/src/main/resources/templates/rea/reaMain.html
+++ b/CustomizedHouse/src/main/resources/templates/rea/reaMain.html
@@ -44,24 +44,21 @@
 					<div style="margin-top: 10px; margin-bottom: 10px;">
 						<hr>
 					</div>
-					<!-- url path로 나옴!  /rea/myPage 로 나옴 -->
-					<!-- <div th:with="currentUrl=(${#httpServletRequest.requestURI})">
-					   <a th:text="${currentUrl}"></a>
-					</div> -->
-					<!-- <div>
-						<b>${reaUserData.officeName}</b><br>
+					<div>
+						
+						<b th:text="${rea.officeName}"></b><br>
 						대표 공인중개사: <br>
-						<b>${reaUserData.reaName}</b><br>
-						${reaUserData.officeHp}
-					</div> -->
+						<b th:text="${user.name}"></b><br>
+						<span th:text="${rea.officePhoneNum}"></span>
+					</div>
 					<div style="margin-top: 10px; margin-bottom: 10px;">
 						<hr>
 					</div>
-					<div th:with="${rea}">
+					<div>
 						사업장 주소: <br>
-						${reaUserData.officeAddr} ${reaUserData.officeDetailAddr}<br><br>
+						<span th:text="${rea.officeAddress}"></span> <br><br>
 						사업자 등록번호: <br>
-						${reaUserData.regNum}
+						<span th:text="${rea.reaNum}"></span>
 					</div>
 				</div>
 				<!-- Left End -->
@@ -75,7 +72,7 @@
 									<div>
 										<div>
 											<h4>
-												안녕하세요. 에 오신 것을 환영합니다. 
+												안녕하세요. <span th:text="${rea.officeName}"></span> 에 오신 것을 환영합니다. 
 											</h4>
 										</div>
 										<!-- <div style="margin-top: 8px;">
@@ -90,9 +87,10 @@
 						
 						<!-- 두 번째 소개 -->
 							<section>
-								<!-- <div>
-									${reaUserData.officeName} ${reaUserData.officeHp}
-								</div> -->
+								<div>
+									<span th:text="${rea.officeName}"></span>
+									<span th:text="${rea.officePhoneNum}"></span> 
+								</div>
 							</section>
 							<div style="margin-top: 20px; margin-bottom: 20px;">
 								<hr>
