--- a/CustomizedHouse/bin/main/templates/fragments/header.html
+++ b/CustomizedHouse/bin/main/templates/fragments/header.html
@@ -20,9 +20,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" th:src="@{//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css}" type="text/css"/>
+    <link rel="stylesheet" th:src="@{//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css}" type="text/css"/>
+    
     <style>
 
     </style>
