--- a/CustomizedHouse/src/main/resources/templates/sign/signUpGenericInfo.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpGenericInfo.html
@@ -42,19 +42,17 @@
 		}
 	</style>
 
-	<form action="<%=request.getContextPath() %>/InsertGenericUserService.d4b" method="post" name="loginForm">
+	<form action="/sign/signUpGenericUser" method="post">
 		<div class="container">
 			<div class="about_content">
 				<div class="row">
 					<div class="col-md-3"></div>
 					<div class="col-md-6">
 						<div class="signup-form">
-
 							<br> <br> <br>
 							<h2 style="text-align: center">개인회원 회원가입</h2>
 							<br>
 							<hr>
-
 							<div class="form-group">
 								<label>아이디 &nbsp;&nbsp;&nbsp;&nbsp;<span id="id_check"></span></label>
 								<input type="text" class="form-control" name="userId"
@@ -63,7 +61,7 @@
 							</div>
 							<div class="form-group">
 								<label>비밀번호 &nbsp;&nbsp;&nbsp;&nbsp;<span id="tdPw"></span></label>
-								<input type="password" class="form-control" name="userPwd"
+								<input type="password" class="form-control" name="password"
 									   id="userPwd" required="required">
 								<div id="pwd_check"></div>
 							</div>
@@ -111,10 +109,11 @@
 								<div class="row">
 									<div class="col-sm-6">
 										<button type="submit" id="signUp"
-												class="btn btn-primary btn-block btn-lg">Sign Up</button>
+												class="btn btn-primary btn-block btn-lg" >Sign Up</button>
 									</div>
 									<div class="col-sm-6">
-										<button type="submit"
+									<div class="col-sm-6">
+										<button type="reset"
 												class="btn btn-primary btn-block btn-lg" onclick="location.href='../getMain.d4b'">Cancel</button>
 									</div>
 								</div>
