[#3] indexLayout에 js fragment 추가

--- a/CustomizedHouse/src/main/resources/templates/indexLayout.html
+++ b/CustomizedHouse/src/main/resources/templates/indexLayout.html
@@ -62,7 +62,8 @@
     <section layout:fragment="content">
     </section>
 </div>
+
 <div th:replace="fragments/footer :: indexFooter"></div>
 </body>
-
+<div layout:fragment="pageJs"/>
 </html>
