--- a/CustomizedHouse/src/main/resources/templates/sign/signUpGenericInfo.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpGenericInfo.html
@@ -80,9 +80,9 @@
 								<label>주민등록번호 &nbsp;&nbsp;&nbsp;&nbsp;<span id="tdId"></span></label>
 								<div class="row">&nbsp;&nbsp;&nbsp;&nbsp;
 									<input type="text" class="form-control" name="frontResNum" id="frontResNum"
-										   required="required" style="width:41%;">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;&nbsp;<input type="password"
-																																		  class="form-control" name="backResNum" id="backResNum"
-																																		  required="required" style="width:41%;">
+										   required="required" style="width:41%;">
+                                    &nbsp;&nbsp;&nbsp;&nbsp;-
+                                    <input type="password" class="form-control" name="backResNum" id="backResNum"  required="required" style="width:41%;">
 								</div>
 							</div>
 							<div class="form-group">
@@ -112,31 +112,36 @@
 												class="btn btn-primary btn-block btn-lg" >Sign Up</button>
 									</div>
 									<div class="col-sm-6">
-									<div class="col-sm-6">
+										<div class="col-sm-6">
 										<button type="reset"
 												class="btn btn-primary btn-block btn-lg" onclick="location.href='../getMain.d4b'">Cancel</button>
+										</div>
 									</div>
 								</div>
+							<br>
+							<br>
+								<div class="text-center">
+									이미 회원이신가요? <a href="../LoginPageService.d4b">Click here</a>
+								</div>
+							<br>
+							<br>
+							<br>
 							</div>
-							<br> <br>
-							<div class="text-center">
-								이미 회원이신가요? <a href="../LoginPageService.d4b">Click here</a>
-							</div>
-
-							<br> <br> <br>
 						</div>
 					</div>
 				</div>
-			</div>
 			<!--End off row-->
-		</div>
+			</div>
 		<!--End off container -->
+		</div>
 	</form>
+</section>
+<js layout:fragment="pageJs">
 	<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0d0c0a21e3bf46994d7f7a41d9cc729f&libraries=services"></script>
 	<script>
 		$(function() {
-// 아이디 유효성 검사(1 = 중복 / 0 != 중복)
+	// 아이디 유효성 검사(1 = 중복 / 0 != 중복)
 			$("#userId").blur(function() {
 				// id = "id_reg" / name = "userId"
 				var userId = $('#userId').val();
@@ -268,4 +273,4 @@
 			}).open();
 		}
 	</script>
-</section>
+</js>
