--- a/CustomizedHouse/src/main/resources/templates/sign/signUpREATerms.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpREATerms.html
@@ -289,6 +289,8 @@
 		<!--End off row-->
 	</div>
 	<!--End off container -->
+</section>
+<js layout:fragment="pageJs">
 	<script>
 		function checkAll() {
 			if ($("#allCheck").is(':checked')) {
@@ -315,4 +317,4 @@
 			});
 		});
 	</script>
-</section>
+</js>
