--- a/CustomizedHouse/bin/main/templates/fragments/footer.html
+++ b/CustomizedHouse/bin/main/templates/fragments/footer.html
@@ -23,7 +23,10 @@
     <script th:src="@{/assets/js/bootsnav.js}"></script>
 
     <script th:src="@{/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js}"></script>
-    <script th:src="@{//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js}"></script>
     <script th:src="@{//code.jquery.com/ui/1.12.1/jquery-ui.js}"></script>
+    <script th:src="@{/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js}"></script>
 
+    <script>
+
+    </script>
 </div>
