--- a/CustomizedHouse/bin/main/templates/index.html
+++ b/CustomizedHouse/bin/main/templates/index.html
@@ -2,16 +2,31 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="~{indexLayout}"
 >
+<style type="text/css" layout:fragment="pageCss">
+    .ui-autocomplete {
+        max-height: 100px;
+        overflow-y: auto;
+        overflow-x: hidden;
+        font-family: 'Noto Sans KR', sans-serif;
+        background-color: rgba( 255, 255, 255, 0.5);
+    }
+    .home {
+        background: url(/images/background/home.jpg) no-repeat bottom center !important;
+        background-size: cover;
+        position: relative;
+    }
+
+    .input-group {
+        height: 45px;
+    }
+
+    .about_bottom_content {
+        padding-left: 80px;
+        padding-right: 80px;
+    }
+</style>
 <section id="hello" class="home bg-mega" layout:fragment="content">
-    <style type="text/css">
-        .ui-autocomplete {
-            max-height: 100px;
-            overflow-y: auto;
-            overflow-x: hidden;
-            font-family: 'Noto Sans KR', sans-serif;
-            background-color: rgba( 255, 255, 255, 0.5);
-        }
-    </style>
+
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
